# mssqltypes-rs

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md  speckit.taskstoissues.agent.md
.github/workflows/: ci.yml  release.yml  vbump.yml
.specify/memory/: constitution.md
.specify/specs/: crates-io-publish.md  cross-type-conversions.md  sql-binary.md  sql-boolean.md  sql-byte.md  sql-datetime.md  sql-decimal.md  sql-double.md  sql-guid.md  sql-int16.md  sql-int32.md  sql-int64.md  sql-money.md  sql-single.md  sql-string.md
specs/002-sql-byte/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/003-sql-int16/: plan.md  quickstart.md  research.md  tasks.md
specs/004-sql-int32/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-sql-int64/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-sql-decimal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-sql-money/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-sql-single/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-sql-double/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-sql-datetime/: data-model.md  (+5 more)
src/: error.rs  lib.rs  sql_binary.rs  sql_boolean.rs  sql_byte.rs  sql_compare_options.rs  sql_datetime.rs  sql_decimal.rs  sql_double.rs  sql_guid.rs  sql_int16.rs  sql_int32.rs  sql_int64.rs  sql_money.rs  sql_single.rs  sql_string.rs
(+59 files in other folders)
